# Emerald

./: CMakeLists.txt  README.md  benchmark.sh  fib.em
docs/: LANGUAGE.md
examples/: classes.em  database.em  files.em  fizzbuzz.em  guess.em  hello.em  shell.em
scripts/: build.bat  build.sh
src/: ast.h  builtins.cpp  environment.cpp  environment.h  errors.h  interpreter.cpp  interpreter.h  json.cpp  json.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  sql.cpp  sql.h  token.h  value.cpp  value.h
tests/: run_test.cmake  test_arrays.em  test_arrays.expected  test_basics.em  test_basics.expected  test_classes.em  test_classes.expected  test_control_flow.em  test_control_flow.expected  test_files.em  test_files.expected  test_functions.em  test_functions.expected  test_imports.em  test_imports.expected  test_operators.em  test_operators.expected  test_shell.em  test_shell.expected  test_sql.em  test_sql.expected  test_strings.em  test_strings.expected  testmod.emerald
